--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
-{	"path":"d:/get_domain",
-	"target_json":"d:/get_domain/target/qq.json",
-	"chrome_path":"E:/software/chrome-win/chrome.exe",
+{	"path":"/Users/guimaizi/eclipse-workspace/get_domain",
+	"target_json":"/Users/guimaizi/eclipse-workspace/get_domain/target/qq.json",
+	"chrome_path":"/Applications/Chromium.app/Contents/MacOS/Chromium",
+	"chromedriver_path":"/Users/guimaizi/hack-tool/chromedriver",
 	"timeout":8,
 	"mongo_config":{"ip":"127.0.0.1","port":27017,"name":"","password":""}
 }
